--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       if (i % 15 == 0) document.write("FizzBuzz");
       else if (i % 3 == 0) document.write("Fizz");
       else if (i % 5 == 0) document.write("Buzz");
-      else document.write(i).style.padding = '1rem';
+      else document.write(i);
     }
   </script>
 </body>
